Replace deprecated primitive wrapper constructors
- Replace new Integer() with Integer.valueOf() in:
  * MultipleSimulateAction.java
  * BatchMultipleSimulateAction.java
  * LRParseTable.java
  * LRParser.java
  * HighlightTable.java
  * Turtle.java
  * NewAction.java
  * ChomskyPane.java
  * InputTableModel.java
  * LRParseController.java
  * GrammarViewer.java

- Replace new Double() with Double.valueOf() in:
  * Turtle.java
  * UnrestrictedTreePanel.java

- Replace new Character() with Character.valueOf() in:
  * Turtle.java
  * FirstFollowModel.java

- Fix Enumeration type compatibility in Trees.java