@@ -151,7 +151,7 @@ public abstract class LRParser {
 		private static final long serialVersionUID = 1L;
 
 		int push(int item) {
-			push(new Integer(item));
+			push(Integer.valueOf(item));
 			return item;
 		}
 
